--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: elixir
+
 elixir:
   - 1.10.0
 otp_release:
   - 22.2
+
+services:
+  - mysql
+
+env:
+  global:
+    - "ENV=test"
+    - "MIX_ENV=test"
+    - "TEST_DATABASE_USERNAME=travis"
+    - "TEST_DATABASE_PASSWORD="
